--- a/style.css
+++ b/style.css
@@ -1,5 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
 
+body {
+  margin: 0;
+}
+
 h1 {
   font-family: "Lobster", cursive;
+}
+
+#main-grid {
+  display: flex;
+  /* flex-wrap: wrap; */
+  width: 500px;
+  height: 500px;
+}
+
+/* MAKING SQUARES FIT IN MAIN GRID*/
+.grid-row {
+  display: flex;
+  width: 100%;
+}
+
+.grid-item {
+  width: fit-content;
+  border: 1px solid black;
+  background-color: cadetblue;
+  box-sizing: border-box;
 }
