--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ button:not(.clear):focus {
 #main-grid {
   display: flex;
   flex-wrap: wrap;
-  width: 650px;
+  width: 100%;
+  max-width: 650px;
   height: 650px;
   border: 0.5px solid gray;
   box-sizing: border-box;
@@ -101,7 +102,8 @@ button:not(.clear):focus {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 350px;
+  width: 100%;
+  max-width: 350px;
   height: 75px;
   font-family: "Press Start 2P", sans-serif;
   padding: 0.75em;
@@ -148,4 +150,64 @@ footer > p {
   padding: 10px;
   border: 2px solid var(--text-color);
   font-size: 10px;
+}
+
+/* Media Query for Phone*/
+@media only screen and (max-width: 480px) {
+  .wrapper {
+    width: 95%;
+  }
+
+  #main-grid {
+    max-width: 100%;
+  }
+
+  .range-slider {
+    max-width: 100%;
+  }
+
+  h1 {
+    font-size: 48px;
+  }
+
+  button {
+    width: 70px;
+    font-size: 8px;
+  }
+
+  footer > p {
+    font-size: 8px;
+  }
+}
+
+/* Media Query for Tablet or iPad */
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+  h1 {
+    font-size: 55px;
+  }
+
+  button {
+    width: 80px;
+    font-size: 10px;
+  }
+
+  footer > p {
+    font-size: 10px;
+  }
+}
+
+/* Media Query for Desktop */
+@media only screen and (min-width: 769px) {
+  h1 {
+    font-size: 65px;
+  }
+
+  button {
+    width: 90px;
+    font-size: 12px;
+  }
+
+  footer > p {
+    font-size: 12px;
+  }
 }
